--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <script src="16_game.js"></script>
 <script src="levels.js"></script>
 
-<link rel="stylesheet" href="css/game.css">
+<link rel="stylesheet" href="game.css">
 
 <body>
   <script>
